# TEC_modeling

./: LICENSE  ModelData.py  README.md  main.py  pyproject.toml  test_p.py
app/: main.py
app/backend/: example_main.py  main.py  pyproject.toml  test_p.py
app/backend/tec/: ModelData.py  __init__.py  data_preparation.py  routes.py
app/dashboard/: main.py  pyproject.toml
app/dashboard/tec/: __init__.py
app/dashboard/tec/callbacks/: callbacks.py  figures.py
app/dashboard/tec/view/: languages.py  view.py
app/tec/callbacks/: __init__.py  callbacks.py
app/tec/view/: languages.py  view.py
libs/tec_calculation/: pyproject.toml
libs/tec_calculation/tec_calculation/: ModelData.py
tec_calculation/: example_main.py  main.py
tec_calculation/tec/: __init__.py  data_preparation.py
tec_modeling/: ModelData.py  data_preparation.py  test_tec.py
