[tool.poetry]
name = "tec-modeling"
version = "0.1.0"
description = ""
authors = ["EkaterinaKugot <kali.kugot@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
