[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["EkaterinaKugot <kali.kugot@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coordinates = {git = "https://github.com/gnss-lab/coordinates.git"}
matplotlib = "^3.9.0"
requests = "^2.32.3"
fastapi = "^0.111.0"
tec-calculation = {path = "../../libs/tec_calculation"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
