[tool.poetry]
name = "tec-modeling-view"
version = "0.1.0"
description = ""
authors = ["EkaterinaKugot <kali.kugot@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.22.0"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
