[tool.poetry]
name = "tec-calculation"
version = "0.1.0"
description = ""
authors = ["EkaterinaKugot <kali.kugot@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
scipy = "^1.14.0"
simurg-core = {git = "https://git.iszf.irk.ru/simurg/simurg_core.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
